--- a/app/views/admin/polls/_form.html.erb
+++ b/app/views/admin/polls/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: poll, local: true) do |form| %>
+<%= form_with(model: [:admin, poll], local: true) do |form| %>
   <% if poll.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(poll.errors.count, "error") %> prohibited this poll from being saved:</h2>
@@ -29,6 +29,11 @@
   <div class="field">
     <%= form.label :logo %>
     <%= form.file_field :logo %>
+  </div>
+
+  <div class="field">
+    <%= form.label :logo_url %>
+    <%= form.text_field :logo_url %>
   </div>
 
   <div class="field">
