--- a/app/views/layouts/_modal.html
+++ b/app/views/layouts/_modal.html
@@ -1,8 +1,9 @@
 <a href="#" class="overlay" onclick="hideModal(); return false;"></a><div id="modal">
-  <a href="#" onclick="hideModal(); return false;" style="position: absolute; top: 8px; right: 6px; font-size: 36px; color: #CCC;">&times;</a>
-  <div style="padding: 34px 12px 0px;">
-    <div style="text-align: center;"><a id="modal-vote" href="#" class="button btn-blue btn-lrg" onclick="return false;" style="min-width: 50%;"></a></div>
-    <h5 id="modal-title" style="padding-top: 8px; text-align: center;"></h5>
-    <div id="modal-content" style="padding-top: 4px;"></div>
+  <a href="#" onclick="hideModal(); return false;" class="x"></a>
+  <div style="padding: 24px 12px;">
+    <div style="text-align: center;"><a id="modalVote" href="#" class="button button-blue" onclick="return false;"></a></div>
+    <p id="modalTitle"></p>
+    <div id="modalImage"></div>
+    <div id="modalContent"></div>
   </div>
 </div>
