add Question model
add has_many association to Poll model
update admin views & js/css assets accordingly
enable drag & drop question ordering with jQuery UI's sortable interaction

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -2,3 +2,8 @@
  *= require normalize
  *= require skeleton
  */
+
+/* FORMS */
+fieldset { padding: 12px; background-color: #fff; border: 1px solid #ccc; }
+input[type="text"], textarea { width: 100%; }
+input[type='checkbox'] + label { display: inline-block; }
