--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <title><%= @poll.title %></title>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-  <script src="//code.jquery.com/jquery-1.12.4.min.js"></script><%# note: can this be upgraded? %>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <%= javascript_pack_tag 'jquery-ui-touch-punch', 'data-turbolinks-track': 'reload' %>
   <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <%= render 'layouts/facebook_metadata' %>
   <link rel="icon" type="image/x-icon" href="<%= image_url 'favicon.ico' %>" />
@@ -16,19 +18,11 @@
 </head>
 
 <body style="zoom: 1;">
-  <%= render 'layouts/facebook_metadata_fallback' %>
+  <%# This partial probably isn't necessary, but may correct weird behavior on Facebook's end %>
+  <%# render 'layouts/facebook_metadata_fallback' %>
   <%= render 'layouts/header' %>
-  <%= render 'layouts/old_browsers' %>
 
   <%= yield %>
-
-  <script>
-    <% if (params['action'] == 'show' || (@vote && @vote.errors.any?)) %>
-      frozen = true;
-    <% else %>
-      frozen = false;
-    <% end %>
-  </script>
 
   <%= render 'layouts/footer' %>
   <%= render 'layouts/modal' %>
