add results display

--- a/app/views/admin/polls/index.html.erb
+++ b/app/views/admin/polls/index.html.erb
@@ -22,6 +22,7 @@
         <td><%= poll.show_results %></td>
         <td>
           <%= link_to 'Edit', edit_admin_poll_path(poll) %> |
+          <%= link_to 'Results', admin_poll_path(poll) %> |
           <%= link_to 'Q\'s', admin_poll_questions_path(poll) %> &
           <%= link_to 'A\'s', admin_poll_answers_path(poll) %> |
           <%= link_to 'Destroy', [:admin, poll], method: :delete, data: { confirm: 'Are you sure?' } %>
