--- a/app/views/admin/polls/show.html.erb
+++ b/app/views/admin/polls/show.html.erb
@@ -1,99 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Slug:</strong>
-  <%= @poll.slug %>
-</p>
+<% @poll.questions.each do |question| %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @poll.title %>
-</p>
+<h1><%= question.field_name %></h1>
 
-<p>
-  <strong>Subtitle:</strong>
-  <%= @poll.subtitle %>
-</p>
+<table>
+  <thead>
+    <th></th>
+    <th></th>
+    <th style="text-align: right;">Votes</th>
+    <th style="text-align: right;">Percent</th>
+  </thead>
 
-<p>
-  <strong>End voting at:</strong>
-  <%= @poll.end_voting_at %>
-</p>
+  <tbody>
+    <% @poll.cached_after_action_results(question_id: question.id).each do |answer, i| %>
+      <tr>
+        <td>
+          <% if answer.image.attached? %><%= image_tag answer.image.variant(resize_to_limit: [100, 100]), style: "height: 60px; width: 60px; border-radius: 25%;" %><% else %><%= image_tag "write-in.png", style: "height: 60px; width: 60px; border-radius: 25%;" %><% end %>
+        </td>
+        <td><%= answer.field_value %></td>
+        <td style="text-align: right;"><%= number_with_delimiter answer.total %></td>
+        <td style="text-align: right;"><%= answer.percent %>%</td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<p>
-  <strong>Show results:</strong>
-  <%= @poll.show_results %>
-</p>
-
-<p>
-  <strong>Results html:</strong>
-  <%= @poll.results_html %>
-</p>
-
-<p>
-  <strong>Donate url:</strong>
-  <%= @poll.donate_url %>
-</p>
-
-<p>
-  <strong>Twitter message:</strong>
-  <%= @poll.twitter_message %>
-</p>
-
-<p>
-  <strong>Index share title:</strong>
-  <%= @poll.index_share_title %>
-</p>
-
-<p>
-  <strong>Index share description:</strong>
-  <%= @poll.index_share_description %>
-</p>
-
-<p>
-  <strong>Vote share title:</strong>
-  <%= @poll.vote_share_title %>
-</p>
-
-<p>
-  <strong>Vote share description:</strong>
-  <%= @poll.vote_share_description %>
-</p>
-
-<p>
-  <strong>Promote share title:</strong>
-  <%= @poll.promote_share_title %>
-</p>
-
-<p>
-  <strong>Promote share description:</strong>
-  <%= @poll.promote_share_description %>
-</p>
-
-<p>
-  <strong>After action email fromline:</strong>
-  <%= @poll.after_action_email_fromline %>
-</p>
-
-<p>
-  <strong>After action email subject:</strong>
-  <%= @poll.after_action_email_subject %>
-</p>
-
-<p>
-  <strong>After action email body:</strong>
-  <%= @poll.after_action_email_body %>
-</p>
-
-<p>
-  <strong>Actionkit domain:</strong>
-  <%= @poll.actionkit_domain %>
-</p>
-
-<p>
-  <strong>Actionkit page:</strong>
-  <%= @poll.actionkit_page %>
-</p>
+<% end %>
 
 <%= link_to 'Edit', edit_admin_poll_path(@poll) %> |
 <%= link_to 'Back', admin_polls_path %>
