--- a/app/views/results/results.html.erb
+++ b/app/views/results/results.html.erb
@@ -61,10 +61,11 @@
   <% end %>
 </style>
 
+<script src="<%= request.path.gsub('/results', '/crosstabs') %>.js"></script>
+
 <script>
 window.lookup = <%= raw @poll.questions.map{ |q| q.answers.map{ |a| [a.id, a.field_value] }.to_h }.inject(&:merge).to_json %>;
 window.lookup[0] = "Other";
-window.runoffResults = <%= raw @crosstabs %>;
 window.removed = {};
 window.removedCount = 0;
 
