add Facebook share button to results page

--- a/app/views/admin/polls/_form.html.erb
+++ b/app/views/admin/polls/_form.html.erb
@@ -118,6 +118,16 @@
     <%= form.text_field :promote_share_description %>
   </div>
 
+  <div class="field">
+    <%= form.label :results_share_title %>
+    <%= form.text_field :results_share_title %>
+  </div>
+
+  <div class="field">
+    <%= form.label :results_share_description %>
+    <%= form.text_field :results_share_description %>
+  </div>
+
   <hr/>
 
   <h5>Confirmation Email</h5>
