--- a/app/views/results/results.html.erb
+++ b/app/views/results/results.html.erb
@@ -1,6 +1,6 @@
 <div class="red gradient" style="height: 15px;"></div>
 
-<% if @admin || @poll.show_results %>
+<% if @admin || @poll.show_results? %>
 
 <div class="container">
   <p style="text-align: center; margin: 1em 0px;"><%= @poll.results_html.html_safe %></p>
