add cache-busting timestamp to crosstabs.js

--- a/app/views/results/results.html.erb
+++ b/app/views/results/results.html.erb
@@ -69,7 +69,7 @@
   <% end %>
 </style>
 
-<script src="<%= request.path.gsub('/results', '/crosstabs') %>.js"></script>
+<script src='<%= "#{ request.path.gsub('/results', '/crosstabs') }.js?#{ Time.now.to_i }" %>'></script>
 
 <script>
 window.lookup = <%= raw @poll.questions.map{ |q| q.answers.map{ |a| [a.id, a.field_value] }.to_h }.inject(&:merge).to_json %>;
